--- a/style.css
+++ b/style.css
@@ -1,86 +1,110 @@
+*{
+   margin: 0;
+   padding: 0;
+   font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
-   background-image: url('black.png');
+   background-color: #161616;
 }
 
-h1 {
-   color: rgb(253, 252, 252);
-   font: 'Franklin Gothic Medium';
-   font-size: 200%;
-   text-align: center;
-}
-
-h2 {
-   color: rgb(255, 255, 255);
-   font: 'Arial';
-   font-size: 150%;
-   text-align: center;
-}
-
-h3 {
-   color: rgb(255, 255, 255);
-   font: 'Arial';
-   font-size: 120%;
-   text-align: center;
-   margin: 0;
-   padding: 0;
-}
-
-h4 {
-   color: rgb(255, 255, 255);
-   font: 'Franlin Gothic Medium';
-   font-size: 200%;
-   text-align: center;
-}
-
-p {
-   color: rgb(255, 255, 255);
-   margin: 0;
-   padding: 0;
-   text-align: center;
-   font: bold 11px sans-serif;
-   font-size: 100%;
-}
-
-img {
-   display: block;
-   margin-left: auto;
-   margin-right: auto;
-   border: 10px solid rgb(255, 255, 255);
-}
-
-ul {
-   color: #ffffff;
-   margin: 0;
-   padding: 0;
-   text-align: center;
-   font: bold 11px sans-serif;
-   font-size: 100%;
-}
-
-dd {
-   color: rgb(253, 253, 253);
-   padding: 10px;
-   text-align: center;
-   font: bold 11px sans-serif;
-   font-size: 100%;
-}
-
-dt {
-   color: rgb(255, 255, 255);
-   text-align: center;
-   font: bold 11px sans-serif;
-   font-size: 100%;
-}
-
-.black{
-   display: flex; 
-   justify-content: center;
-   align-items: center;
-}
-
-.white{
+.navbar{
+   height: 60px;
+   background-color: #2E2E2E;
    display: flex;
-   justify-content: center;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.logo{
+   color: white;
+   padding-left: 40px;
+   cursor: default;
+}
+
+.navbar-links{
+   width: 20%;
+}
+
+.navbar-menus{
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: space-evenly;
+}
+
+.navbar-menus li{
+   list-style-type: none;
+}
+
+.navbar-menus li a{
+   text-decoration: none;
+   color: white;
+}
+
+.container{
+   margin: 20px;
+   padding: 40px;
+   background-color: #2E2E2E;
+   color: white;
+   border-radius: 20px;
+   display: flex;
+}
+
+.profiles{
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   width: 100%;
+}
+
+.profile-container{
+   width: 80%;
+}
+
+.profile-picture img{
+   width: 200px;
+   height: 200px;
+   object-fit: cover;
+   border-radius: 100%;
+}
+
+.profile-data{
+   margin-left: 50px;
+}
+
+.vertical{
+   display: flex;
+   flex-direction: column;
+   width: 100%;
+}
+
+.mini-containers{
+   margin-top: 10px;
+}
+
+.mini-row{
+   display: flex;
+   justify-content: space-between;
+   margin-top: 10px;
+}
+
+.mini{
+   background-color: #161616;
+   width: 45%;
+   height: 30px;
+   padding: 20px;
+   border-radius: 20px;
+   margin-top: 10px;
+   display: flex;
    align-items: center;
 }
 
+.mini-icons a{
+   text-decoration: none;
+   color: white;
+}
+
+.footer-icons i{
+   font-size: 24px;
+}
